dev.log

> emergent-js@0.1.0 dev /app
> next dev

▲ Next.js 16.1.6 (Turbopack)
- Local:         http://localhost:3000
- Network:       http://192.168.0.2:3000

✓ Starting...
✓ Ready in 1093ms
○ Compiling / ...
 GET / 200 in 7.2s (compile: 6.5s, render: 693ms)
 GET /api/storage?key=surat-world-storage 200 in 1081ms (compile: 1047ms, render: 33ms)
 GET /api/storage?key=custom_scenarios 200 in 18ms (compile: 5ms, render: 13ms)
 GET /api/storage?key=custom_scenarios 200 in 17ms (compile: 7ms, render: 11ms)
 GET /api/storage?key=surat-chat-messages-game-1770916756219 200 in 536ms (compile: 485ms, render: 50ms)
 POST /api/storage 200 in 142ms (compile: 53ms, render: 88ms)
 POST /api/storage 200 in 565ms (compile: 520ms, render: 45ms)
 GET /api/storage?key=surat-chat-messages-game-1770916756219 200 in 43ms (compile: 14ms, render: 29ms)
 GET /api/storage?key=surat-processed-tools-game-1770916756219 200 in 47ms (compile: 25ms, render: 22ms)
 GET /api/storage?key=surat-processed-tools-game-1770916756219 200 in 27ms (compile: 10ms, render: 17ms)
 POST /api/storage 200 in 41ms (compile: 8ms, render: 33ms)
 POST /api/storage 200 in 50ms (compile: 6ms, render: 44ms)
 POST /api/storage 200 in 47ms (compile: 6ms, render: 41ms)
⨯ SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at POST (app/api/chat/route.ts:18:56)
  16 |
  17 | export async function POST(req: Request) {
> 18 |   const { messages, worldState, modelId } = (await req.json()) as {
     |                                                        ^
  19 |     messages: UIMessage[];
  20 |     worldState: WorldState;
  21 |     modelId?: string;
 ELIFECYCLE  Command failed.
[?25h
